// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders input 1`] = `
<div>
  <input
    class="input-root form-control"
    type="text"
    value=""
  />
</div>
`;

exports[`Input renders input button 1`] = `
<div>
  <div
    class="input-group-item input-group-item-shrink input-group-append"
  >
    <button
      class="btn btn-secondary"
      type="button"
    />
  </div>
</div>
`;

exports[`Input renders input group 1`] = `
<div>
  <div
    class="input-group"
  />
</div>
`;

exports[`Input renders input group item 1`] = `
<div>
  <div
    class="input-group-item"
  />
</div>
`;

exports[`Input renders input group with inset 1`] = `
<div>
  <div
    class="input-group"
  />
</div>
`;

exports[`Input renders input inset 1`] = `
<div>
  <div
    class="input-group-inset-item"
  />
</div>
`;

exports[`Input renders input text 1`] = `
<div>
  <div
    class="input-group-text"
  />
</div>
`;
